@@ -20,6 +20,7 @@ class NativeStyle(Style):
     """
 
     background_color = '#202020'
+    highlight_color = '#404040'
 
     styles = {
         Token:              '#d0d0d0',
